# ipcoal

./: .readthedocs.yml  404.html  README.md  index.html  mkdocs.yml  setup.cfg  setup.py  simulation.ipynb
FAQs/: index.html
MSC_likelihood/: index.html
Model_class/: index.html
SMC_likelihood/: index.html
batch-scripts/: run-sim-infer-batch.py  run-sim-infer.py  slurm-distribute-sim-infer.py
change_log/: index.html
citation/: index.html
contribute/: index.html
cookbooks/cookbook-gentime-empirical/: index.html
docs/: FAQs.md  MSC_likelihood.ipynb  Model_class.ipynb  SMC_likelihood.ipynb  change_log.md  citation.md  contribute.md  gene-tree-inference.ipynb  index.md  installation.md  interaction-with-tskit.ipynb  msc.ipynb  network-inference.ipynb  quick_guide.ipynb  quicker_guide.ipynb  simulation.ipynb  species-tree-inference.ipynb  terminology.md  theory_Kingman.ipynb  visualization.ipynb
docs/cookbooks/: cookbook-gentime-empirical.ipynb
gene-tree-inference/: index.html
installation/: index.html
interaction-with-tskit/: index.html
ipcoal/: __init__.py  model.py
ipcoal/core/: sim_loci.py  sim_trees.py
ipcoal/draw/: __init__.py  draw_embedded_genealogy.py  draw_genealogy.py  seqview.py
network-inference/: index.html
notebooks/: SMC-gentime.ipynb  SMC-new-gentime.ipynb  SMC.ipynb  Untitled.ipynb  Untitled1.ipynb  anomaly-zone-final.ipynb  containers-and-phylo-class-trials.ipynb  ipcoal-toytree.ipynb  new-syntax.ipynb  recomb-response-testing.ipynb  run-recomb.py  run_recomb2.py  slim_and_msprime.ipynb  teaching-demo.ipynb  verify-theta-and-tau.ipynb  verify-time-units.ipynb
quick_guide/: index.html
quicker_guide/: index.html
search/: search_index.json
simulation/: index.html
species-tree-inference/: index.html
terminology/: index.html
theory_Kingman/: index.html
visualization/: index.html
(+39 files in other folders)
