#######################################################################
# CONFIGURATION FILE
# This is the preferred file format in place of older setup.py
#
# Examples
# --------
# Install ipcoal with:
#     >>> conda install ipcoal -c conda-forge
# Or, for developers, install dependencies and then ipcoal w/ pip local:
#     >>> git clone https://github.com/eaton-lab/ipcoal
#     >>> cd ipcoal/
#     >>> conda env create -f environment.yml
#     >>> pip install -e . --no-deps
#######################################################################

[metadata]
name = ipcoal
version = attr: ipcoal.__version__
author = Deren Eaton & Patrick McKenzie
author_email = de2356@columbia.edu
url = https://eaton-lab.org/ipcoal
description = "Coalescent simulation and evolutionary analyses"
long_description = file: README.md
long_description_content_type = text/markdown
keywords = phylogeny, tree, network, plotting, coalescent, SMC, Genealogy, gene tree
license = GPL
license_files =
    LICENSE.txt
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
packages = find:
zip_safe = True   # use False if you use __file__ in your code.
include_package_data = True
python_requires = >=3.7
install_requires =
    toytree>=3.0.1
    msprime
    numpy
    scipy
    pandas
    numba    
    loguru
    requests

[options.entry_points]
# console_scripts =

[options.extras_require]
dev =
    black==22.1.0
    flake8==4.0.1
